fixed margin on title spacing

--- a/apps/web/src/components/ScheduleSection/ScheduleSection.module.scss
+++ b/apps/web/src/components/ScheduleSection/ScheduleSection.module.scss
@@ -56,8 +56,8 @@
     }
 
     &Center {
-      // max-width: 750px;
       display: flex;
+      margin-bottom: 6px;
     }
 
     &CenterWrapper {
